--- a/Server_FakhrizarRifqiFuad_044/Server_FakhrizarRifqiFuad_044.csproj
+++ b/Server_FakhrizarRifqiFuad_044/Server_FakhrizarRifqiFuad_044.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6CD89726-7843-4C17-8479-07AFA985FC6E}</ProjectGuid>
+    <ProjectGuid>{1ABF2AB1-908D-44C3-A0C3-13953FE6C644}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Client_Fakhrizar_Rifqi_Fuad_044</RootNamespace>
-    <AssemblyName>Client_Fakhrizar Rifqi Fuad_044</AssemblyName>
+    <RootNamespace>Server_FakhrizarRifqiFuad_044</RootNamespace>
+    <AssemblyName>Server_FakhrizarRifqiFuad_044</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,8 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ServiceMtk-P1-044">
+      <HintPath>..\..\ServiceMtk-P1-044\ServiceMtk-P1-044\bin\Debug\ServiceMtk-P1-044.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,6 +58,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
